<resources>
    <string name="app_name">Nutrisa</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pregunta1">1.- ¿Al llegar a la tienda se encuentra el hostess posicionado invitando a los clientes a entrar y conoce su meta?</string>
    <string name="pregunta2">2.-¿El personal se encuentra con uniforme completo y limpio?, ¿Portan su gafete con nombre?</string>
    <string name="pregunta3">3.-¿El check out se encuentra abastecido?</string>
    <string name="pregunta4">4.-¿Las mesas y sillas estan limpias y en buen estado?</string>
    <string name="pregunta5">5.-¿Se encuentran abastecidos los muebles de comercial?</string>
    <string name="pregunta6">6.-¿El planograma del refrigerador de bebidas se encuentra conforme al ultimo planograma y esta abastecido?</string>
    <string name="pregunta7">7.-¿La barra se encuentra limpia y con nivel adecuado en cada inserto?</string>
    <string name="pregunta8">8.-¿Se encuentra con la fruta necesaria para la venta del dia de acuerdo a las visitas de la tienda y no se encuentra oxidada?</string>
    <string name="pregunta9">9.-¿Se cuenta con insumos necesarios para operar bajo la regla de servicio rapido?</string>
    <string name="pregunta10">10.-¿Se aplica el panograma vigente de paletas y helado duro?</string>
    <string name="pregunta11">11.-¿Se realiza arqueo de caja y se encuentra completo conforme a ventas?</string>
    <string name="pregunta12">12.-¿El cajero cumple con el speach de venta al 100% ? (App, topping, producto adicional y voz del cliente ) y ¿se cumple con la regla 40/60?</string>
    <string name="pregunta13">13.-¿Se tiene el producto de impulso de la semana con su POP de acuerdo al comunicado semanal?</string>
    <string name="pregunta14">14.-¿El cajero cuenta con su objetivo del dia en piezas por promoción?</string>
    <string name="pregunta15">15.-¿Se cuenta con marcatextos para señalar la voz del cliente y se menciona en transacción?</string>
    <string name="pregunta16">16.-¿Se cuenta con ticket de visitas por ahora colocado en pantalla y se mide vs el año anterior cada hora?</string>
    <string name="pregunta17">17.-¿Se cuenta con POP completo para punto de venta conforme mapa?</string>
    <string name="pregunta18">18.-¿La bodega se encuentra bajo los liniamientos de limpieza y calidad alimentaria?</string>
    <string name="pregunta19">19.-¿Se encuentra el posicionamiento físicamente de acuerdo al formato de pizarra y conforme a la cantidad de ticket por hora?</string>
    <string name="pregunta20">20.-¿La pizarra de productividad se encuentra en uso y se tienen los reportes actualizados?</string>
    <string name="title_caja">Supervisión de caja</string>
    <string name="title_visita_rapida">Visita rápida</string>
    <string name="title_fachada">Supervisión de fachada</string>
    <string name="title_piso">Supervisión piso de venta</string>
    <string name="title_barra">Supervisión de barra</string>
    <string name="title_bodega">Supervisión de bodega/pizarra</string>
    <string name="basico_exterior">Basico (Exterior)</string>
    <string name="obligatorio">"  *"</string>
    <string name="estandar3">El piso se encuentra limpio, sin chicles o manchas visibles. Mesas y sillas ordenadas y limpias</string>
    <string name="question_4">Anaqueles limpios, sin pegamento, abastecidos, Planogramas vigente y POP de acuerdo al mapa y precios actualizados ( revisar 10 productos al azar)</string>
    <string name="question_5">Se tiene el producto \"Próximo a caducar\" señalado con etiquetas 50% mercadeado en la zona de liquidación  y se tiene el precio correcto.</string>
    <string name="question_barra">El área de la barra se encuentra limpia (debajo, en las orillas, vidrios). Cristal antiestornudo limpio</string>
    <string name="quetion_barra_montaje">La barra montada de acuerdo al planograma correspondente a visitas por día, Toppings sin fermentación, contaminación cruzada. Indicadores completos</string>
    <string name="question_botes">Los botes de topping se encuentran con caducidad vigente, estan limpios e identificados</string>
    <string name="bitacora">Se cuenta con la bitácora de limpieza con iniciales de quien realiza actividad y con la firma del gerente que supervisa la actividad.</string>
    <string name="basico_bano">El baño se encuentra limpio, sin sarro, con despachadores en buen estado.</string>
    <string name="lockers">Lockers sin comida, sin uniformes y solo se utilizan por el personal en turno.</string>
    <string name="castilla">No exceso de canastillas, se regresan semanalmente a CEDIS.</string>
    <string name="estructura">Las paredes, esquinas y zoclos se encuentran limpios, sin residuos o manchas.</string>
    <string name="horno">El Horno de microondas limpio, sin alimentos.</string>
    <string name="refrigerador">Los refrigeradores limpios en la parte exterior, interior, empaques y en buen estado.</string>
    <string name="bodega">Las bases y Topping se encuentran con etiqueta peps, caducidad vigente y canastillas limpias.</string>
    <string name="xunan">La comida y bebidas de los colaboradores están en un recipiente cerrado e identificado.</string>
    <string name="producto_limpieza">Se cuenta con todos los insumos de limpieza autorizados y no se tienen escurrimientos en los botes o trampa de grasa.</string>
    <string name="tarja">La tarja esta limpia, ordenada, sin sarro y sin pendientes por lavar. Se respetan estándares PCN.</string>
    <string name="trampa_grasa">La trampa de grasa esta en buenas condiciones , no despide mal olor  y se cuenta con el ultimo respaldo del mantenimiento.</string>
    <string name="title_visita_larga">Auditoria de operaciones completa</string>
    <string name="gente1">Se encuentra la carpeta de capacitación actualizada  y en buen estado.</string>
    <string name="gente2">Gerente de tienda le da  seguimiento a plan de vuelo y lo conocen los  Xunan Cabs en turno? (Seguimiento formatos de inducción, conocimiento de empleados cursos básicos.</string>
    <string name="gente3">El equipo de tienda cuenta con todos los cursos de la plataforma realizados de acuerdo al puesto y al tiempo predeterminado (revisar en la plataforma digital con el gerente).</string>
    <string name="gente4">Los candidatos a crecimiento para otro puesto cuentan con los cursos cargados y se realizan.</string>
    <string name="gente5">La plantilla de la tienda esta conforme a los establecido por RR.HH. y operaciones.</string>
    <string name="gente6">Se encuentra el horario actual  y se publica el viernes anterior.</string>
    <string name="gente7">Se realiza una  guía de observación de preparación de helado.</string>
    <string name="gente8">Se ejecuta y se tiene conocimiento del proceso de 40/60.</string>
    <string name="curso_covid">Los Xunan Kabs conocen los lineamientos del curso de servicio en la NUEVA NORMALIDAD.</string>
    <string name="pizarra_productividad">La pizarra cuenta con los  8 formatos actuales, se llenan de manera adecuada y se da seguimiento.</string>
    <string name="horario">Se realiza el horarios conforme a visitas y no se tiene un excedente de plantilla en turno</string>
    <string name="posicionamiento">Se tiene el posicionamiento conforme al turno actual y se realiza conforme a las visitas por hora.</string>
    <string name="arrastre">Se realiza el arrastre diario con los resultados conforme a los colores establecidos.</string>
    <string name="ventas_semanal">Se tienen actualizado el control de ventas al día corriente.</string>
    <string name="planograma_barra">Se cuenta con el planograma por visitas de armado de barra y esta legible.</string>
    <string name="voz_cliente">Se da seguimiento diario y semanal al formato asignado para los resultados de voz cliente y se revisa que los cupones estén completos.</string>
    <string name="pcn">Se realiza por turno el check list de PCN.</string>
    <string name="plan_accion">Plan de acción actualizado con el mes en curso, con seguimiento dos veces en el mismo mes.</string>
    <string name="proximo_caducar">Se tiene el producto en liquidación y fuera de Planogramas en la zona de liquidación con etiqueta del 50%  y precio correcto.</string>
    <string name="question7">Refrigerador de bebidas limpio exterior e interior, abastecido, de acuerdo al Planogramas y POP vigente.</string>
    <string name="aire_acondicionado">Se encuentra el aire acondicionado funcionando. Techo o plafón limpio, sin hilos colgando. Todas las luces encendidas.</string>
    <string name="punto_venta">El área de la caja se encuentra con el pop y productos autorizados en comunicado. Libre de papeles.</string>
    <string name="spetch_venta">En caja se menciona promoción vigente, Ofrece Topping extra, venta sugestiva del producto de impulso, App Nutrisa, Voz del cliente.</string>
    <string name="proceso_covid">El personal utiliza kits de protección (Careta, Cubrebocas, mangas, tapete sanitizantes , sales cuaternarias, termometro, oximetro, validar lavado de manos cada 20 minutos, uso de gel antibacterial en cada helado, bote de basura para cubre bocas desechables, señalética Covid.</string>
    <string name="gel_sanatizante">Se cuenta con gel sanitizante para los clientes en el bote establecido por la marca con no menos de 1/4.</string>
    <string name="botes_basura">Los botes de basura con bolsa, limpios, sin exceso de basura y se conoce la capacidad máxima de los botes ( 3/4).</string>
    <string name="strategia_venta">El cajero conoce sus objetivos de venta por turno y se plasman en el formato autorizado.</string>
    <string name="plan_reconocimiento">Se cuenta con orgullo Nutrisa en tienda y se otorgan tarjetas destacando cuando algún colaborador ofrece una experiencia de servicio memorable.</string>
    <string name="modeloCapa">El gerente de tienda conoce el modelo de capacitación Nutrisa? (70/20/10).</string>
    <string name="congelador_barra">Congeladores limpios, libres de escarcha, termómetro funcionando correctamente y sus puertas están en buen estado.</string>
    <string name="planograma_basico_barra">Las paletas y Hb acomodados de acuerdo al Planogramas. HB boleado con botes abastecidos y limpios.</string>
    <string name="maquina_helado">La maquina de helados se encuentra limpia en su interior y exterior y funcionando correctamente.</string>
    <string name="prueba_helado">El helado final cumple con la imagen y peso establecidas (realizar prueba con colaboradores).</string>
    <string name="tooping">Se tienen inventario suficiente de los  Topping de alto desplazamiento ( de acuerdo al listado de planeación de la demanda).</string>
    <string name="refri_barra">Los refrigeradores funcionan de manera adecuada y cuentan con termómetro (debe existir reporte a MDA).</string>
    <string name="insumos_congelado">Se cuenta con vasos, servilletas, portavasos suficientes para la operación del turno.</string>
    <string name="contenedor_barra">Se cuenta con los botes señalizados con sanitizante para boleadoras, vidrios , barra y trapos.</string>
    <string name="carpetas_admon">Se cuenta con las 7  carpetas publicadas ( Comunicación, Calidad, Efectivo, Negocio, Gubernamental, Inventarios, Gerente de distrito).</string>
    <string name="carpeta_comunicacion">La carpeta de comunicación cuenta con los comunicados  gerente distrito , comunicados operaciones semanal y mapa mensual  completos y  firmados por todo el personal.</string>
    <string name="sub_header">Cerrar sesion</string>
    <string name="configuracion">Configuración</string>
    <string name="menu_rapida">Visita Rapida</string>
    <string name="menu_larga">Visita Larga</string>
    <string name="menu_principal">Menu Principal</string>
</resources>