<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menuFragment"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_principal" />
        <item
            android:id="@+id/visitaRapidaActivity"
            android:icon="@drawable/ic_abeja_bicolor"
            android:title="@string/menu_rapida" />
        <item
            android:id="@+id/barraFragment"
            android:icon="@drawable/ic_abeja_naranja"
            android:title="@string/menu_larga" />
        <item
            android:id="@+id/cajaFragment"
            android:icon="@drawable/ic_settings_25"
            android:title="@string/configuracion" />
    </group>
    <group android:checkableBehavior="single">
    <item
        android:id="@+id/cerrarSesion"
        android:icon="@drawable/ic_cerrar_sesion"
        android:title="@string/sub_header" />
    </group>
</menu>